<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_name"
            android:textColor="@color/text"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Jawand Singh"
            android:gravity="center"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:textColor="@color/text"
            android:textColorHint="@color/teal_700" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/enter_email"
            android:textColor="@color/text"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="JawandSingh@gmail.com"
            android:hint="@string/enter_email"
            android:inputType="text"
            android:textColor="@color/text"
            android:textColorHint="@color/teal_700"
            tools:ignore="TextFields" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/enter_phone"
            android:textColor="@color/text"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/phoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="JawandSingh@gmail.com"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:textColor="@color/text"
            android:textColorHint="@color/teal_700"
            tools:ignore="TextFields" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:background="@color/foreground"
                android:gravity="center"
                android:onClick="setEmail"
                android:text="@string/add_contact"
                android:textColor="@color/text" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@color/foreground"
                android:gravity="center"
                android:onClick="getEmail"
                android:text="@string/GetContact"
                android:textColor="@color/text" />
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:scrollHorizontally="true"
                android:text="@string/email"
                android:textColor="@color/text"
                android:textSize="30sp" />
        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/display2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:scrollHorizontally="true"
                android:text="@string/phone"
                android:textColor="@color/text"
                android:textSize="30sp" />
        </HorizontalScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>